# Multi-Source-RAG-System

./: .env  README.md  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json
qdrant_storage/collections/docs/0/segments/6fe837ec-a347-452d-ae14-6e0b911652ae/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/b7acb307-ec12-4fa7-9214-7cfae22b518e/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/d07e95f6-3fc4-4a13-926c-7fafc8a1a7f3/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/e745d244-c8ed-4ee8-a60d-d1216240d5f9/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/ec5fb046-bd2e-48c1-91b2-4f5ecb9f6c88/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/docs/0/segments/ed3f7af5-92c2-4e46-8d7a-51889334e96c/: mutable_id_tracker.mappings
qdrant_storage/collections/sentences/0/: replica_state.json
uploads/: TP064878_CRIMISO_Individual_Assignment.docx  TP064878_INMPD_Individual_Assignment.docx
